--- a/index.html
+++ b/index.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/index.css">
-    <title>Document</title>
-</head> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/index.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <title>Document</title>
+</head>
+
 <body>
-    <header>
-        <iframe src="menu/header.html"></iframe>        
-    </header>
-    <section>
-        <div class="container"></div>
-    </section>
-    <footer>
-      <iframe src="menu/footer.html"></iframe>
-    </footer>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="/js/main.js"></script>
+  <header>
+    <iframe src="menu/header.html"></iframe>
+  </header>
+  <div class="container"></div>
+  <div class="card" style="width: 18rem;">
+    <img src="prueba2.jpg" class="card-img-top" alt="">
+
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+        content.
+      </p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+  <section>
+    <div class="container"></div>
+  </section>
+  <footer>
+    <iframe src="menu/footer.html"></iframe>
+  </footer>
+
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <script src="/js/main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
