--- a/index.html
+++ b/index.html
@@ -11,50 +11,55 @@
 </head>
 
 <body>
-  <header> <!--Menú-->
-     <!-- Inicio del logo-->
-     <nav class="color logo">
+  <header>
+    <!--Menú-->
+    <!-- Inicio del logo-->
+    <nav class="color logo">
       <div id="hijo">
-         <h1>Logo</h1> 
+        <h1>Logo</h1>
       </div>
-  </nav>
-  <!--Fin del Logo-->
-  <!--Menu-->
-  <nav id="menu" class="menu color">
+    </nav>
+    <!--Fin del Logo-->
+    <!--Menu-->
+    <nav id="menu" class="menu color">
       <ul>
-          <li><a href="">Temas</a></li>
-          <li><a href="">Noticias</a></li>
-          <li><a href="">Fotos</a></li>
-          <li><a href="">Vectores</a></li>
-          <li><a href="">Colaboradores</a></li>
+        <li><a href="">Temas</a></li>
+        <li><a href="">Noticias</a></li>
+        <li><a href="">Fotos</a></li>
+        <li><a href="">Vectores</a></li>
+        <li><a href="">Colaboradores</a></li>
       </ul>
-  </nav>
+    </nav>
     <!--Menu-->
   </header>
-  
-  <section> <!--Cuerpo-->
-    <div class="card" style="width: 18rem;">
-      <img src="imagenes/prueba2.jpg" class="card-img-top" alt="">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
+  <div class="card" style="width: 18rem;">
+    <img src="imagenes/prueba2.jpg" class="card-img-top" alt="">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+        content.
+      </p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
+  </div>
+
+  <section>
+    <!--Cuerpo-->
+    <div class="container"></div>
+
   </section>
-  
-  <footer> <!--Pie de pagina -->
+
+  <footer>
+    <!--Pie de pagina -->
     <div class="contenedor">
-        <h2>Contactenos</h2>
+      <h2>Contactenos</h2>
     </div>
     <div class="contenedor">
-        <h2>Redes sociales</h2>
+      <h2>Redes sociales</h2>
     </div>
-      <div class="contenedor">
-        <h1>logo</h1>
-      </div>
+    <div class="contenedor">
+      <h1>logo</h1>
+    </div>
   </footer>
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="js/bootstrap.min.js"></script>
