--- a/index.html
+++ b/index.html
@@ -32,14 +32,40 @@
     </nav>
     <!--Menu-->
   </header>
-  <div class="card" style="width: 18rem;">
-    <img src="imagenes/prueba2.jpg" class="card-img-top" alt="">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-        content.
-      </p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+  <div class="card-group">
+
+    <div class="card" style="width: 18rem ;">
+      <img src="imagenes/prueba2.jpg" class="card-img-top" alt="">
+
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.
+        </p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem ;">
+      <img src="imagenes/prueba2.jpg" class="card-img-top" alt="">
+
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.
+        </p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem ;">
+      <img src="imagenes/prueba2.jpg" class="card-img-top" alt="">
+
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.
+        </p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
     </div>
   </div>
 
