--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">                                          
   <link rel="stylesheet" href="styles/index.css">
   <link rel="stylesheet" href="styles/menu.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -45,16 +46,16 @@
     </div>
   </section>
   
-  <footer> <!--Pie de pagina -->
+  <footer id="footer"> <!--Pie de pagina -->
     <div class="contenedor">
-        <h2>Contactenos</h2>
+        <p>¿Nos sigues?</p>
+        <a href=""><i class="fab fa-facebook"></i></a>
+        <a href=""><i class="fab fa-instagram"></i></a>
+        <a href=""><i class="fab fa-twitter"></i></a>
+        <a href=""><i class="fab fa-google-plus-g"></i></a>
+      <p>Escribenos y unete a nuestro equipo</p>
+      <i class="far fa-envelope imail"></i><span>masfotos@v&p.com</span>
     </div>
-    <div class="contenedor">
-        <h2>Redes sociales</h2>
-    </div>
-      <div class="contenedor">
-        <h1>logo</h1>
-      </div>
   </footer>
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="js/bootstrap.min.js"></script>
