--- a/menu/header.html
+++ b/menu/header.html
@@ -28,6 +28,7 @@
         </nav>
           <!--Menu-->
     </head>
+    <div style="height: 10000px;"></div>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="../js/main.js"></script>
 </body>
