--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">                                          
-  <link rel="stylesheet" href="styles/index.css">
   <link rel="stylesheet" href="styles/menu.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <title>Document</title>
@@ -15,14 +15,14 @@
   <header>
     <!--Menú-->
     <!-- Inicio del logo-->
-    <nav class="color logo">
+    <nav class="colors logoimg">
       <div id="hijo">
         <h1>Logo</h1>
       </div>
     </nav>
     <!--Fin del Logo-->
     <!--Menu-->
-    <nav id="menu" class="menu color">
+    <nav id="barra" class="menu colors">
       <ul>
         <li><a href="">Temas</a></li>
         <li><a href="">Noticias</a></li>
@@ -33,6 +33,7 @@
     </nav>
     <!--Menu-->
   </header>
+
   <div class="card-group">
 
     <div class="card" style="width: 18rem ;">
@@ -43,7 +44,7 @@
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
           content.
         </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="paginas/vectores.html" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
     <div class="card" style="width: 18rem ;">
@@ -80,10 +81,9 @@
       <i class="far fa-envelope imail"></i><span>masfotos@v&p.com</span>
     </div>
   </footer>
+  <script src="/js/main.js"></script>
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="http://code.jquery.com/jquery-latest.js"></script>
-  <script src="/js/main.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
