--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <!--Menu-->
     <nav id="barra" class="menu colors">
       <ul>
-        <li><a href="">Temas</a></li>
+        <li><a href="index.html">Temas</a></li>
         <li><a href="">Noticias</a></li>
         <li><a href="">Fotos</a></li>
-        <li><a href="">Vectores</a></li>
+        <li><a href="paginas/vectores.html">Vectores</a></li>
         <li><a href="">Colaboradores</a></li>
       </ul>
     </nav>
