--- a/paginas/vectores.html
+++ b/paginas/vectores.html
@@ -20,14 +20,14 @@
         <!--Fin del Logo-->
         <!--Menu-->
         <nav id="barra" class="menu colors">
-          <ul>
-            <li><a href="">Temas</a></li>
-            <li><a href="">Noticias</a></li>
-            <li><a href="">Fotos</a></li>
-            <li><a href="">Vectores</a></li>
-            <li><a href="">Colaboradores</a></li>
-          </ul>
-        </nav>
+            <ul>
+              <li><a href="../index.html">Temas</a></li>
+              <li><a href="">Noticias</a></li>
+              <li><a href="">Fotos</a></li>
+              <li><a href="paginas/vectores.html">Vectores</a></li>
+              <li><a href="">Colaboradores</a></li>
+            </ul>
+          </nav>
         <!--Menu-->
     </header>
     
