--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">                                          
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,600;0,700;0,800;1,400&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/menu.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <title>Document</title>
@@ -70,13 +72,40 @@
       </div>
     </div>
   </div>
-  <footer id="footer"> <!--Pie de pagina -->
+  <div class="card-group">
+
+    <div class="card" style="width: 18rem ;">
+      <img src="imagenes/prueba2.jpg" class="card-img-top" alt="">
+
+      <div class="card-body">
+        <h5 class="card-title">fotografos</h5>
+        <p class="card-text">Some quick example text to build on the fotos and make up the bulk of the card's
+          content.
+        </p>
+        <a href="#" class="btn btn-primary">entar</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem ;">
+      <img src="imagenes/prueba2.jpg" class="card-img-top" alt="">
+
+      <div class="card-body">
+        <h5 class="card-title">fotos</h5>
+        <p class="card-text">Some quick example text to build on the fotos and make up the bulk of the card's
+          content.
+        </p>
+        <a href="#" class="btn btn-primary">fotos</a>
+      </div>
+    </div>
+
+  </div>
+  <footer id="footer">
+    <!--Pie de pagina -->
     <div class="contenedor">
-        <p>¿Nos sigues?</p>
-        <a href=""><i class="fab fa-facebook"></i></a>
-        <a href=""><i class="fab fa-instagram"></i></a>
-        <a href=""><i class="fab fa-twitter"></i></a>
-        <a href=""><i class="fab fa-google-plus-g"></i></a>
+      <p>¿Nos sigues?</p>
+      <a href=""><i class="fab fa-facebook"></i></a>
+      <a href=""><i class="fab fa-instagram"></i></a>
+      <a href=""><i class="fab fa-twitter"></i></a>
+      <a href=""><i class="fab fa-google-plus-g"></i></a>
       <p>Escribenos y unete a nuestro equipo</p>
       <i class="far fa-envelope imail"></i><span>masfotos@v&p.com</span>
     </div>
