--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
           content.
         </p>
-        <a href="paginas/vectores.html" class="btn btn-primary">Go somewhere</a>
+        <a href="paginas/vectores.html" class="btn btn-primary">Vectores</a>
       </div>
     </div>
     <div class="card" style="width: 18rem ;">
