--- a/paginas/vectores.html
+++ b/paginas/vectores.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">                                          
     <link rel="stylesheet" href="../styles/menu.css">
+    <link rel="stylesheet" href="../styles/vectores.css">
     <title>Document</title>
 </head>
 <body>
@@ -30,7 +31,116 @@
           </nav>
         <!--Menu-->
     </header>
-    
+    <div class="caja1">
+        <figure class="snip1477">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample38.jpg" alt="sample38" />
+            <div class="title">
+              <div>
+                <h2>Penny</h2>
+                <h4>Tool</h4>
+              </div>
+            </div>
+            <figcaption>
+              <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
+            </figcaption>
+            <a href="#"></a>
+          </figure>
+          <figure class="snip1477">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample91.jpg" alt="sample91" />
+            <div class="title">
+              <div>
+                <h2>Ingredia</h2>
+                <h4>Nutrisha</h4>
+              </div>
+            </div>
+            <figcaption>
+              <p>I'm killing time while I wait for life to shower me with meaning and happiness.</p>
+            </figcaption>
+            <a href="#"></a>
+          </figure>
+          <figure class="snip1477">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample35.jpg" alt="sample35" />
+            <div class="title">
+              <div>
+                <h2>Hans</h2>
+                <h4>Down</h4>
+              </div>
+            </div>
+            <figcaption>
+              <p>The only skills I have the patience to learn are those that have no real application in life. </p>
+            </figcaption>
+            <a href="#"></a>
+          </figure>
+          <figure class="snip1477">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample35.jpg" alt="sample35" />
+            <div class="title">
+              <div>
+                <h2>Hans</h2>
+                <h4>Down</h4>
+              </div>
+            </div>
+            <figcaption>
+              <p>The only skills I have the patience to learn are those that have no real application in life. </p>
+            </figcaption>
+            <a href="#"></a>
+          </figure>
+          
+        </div>
+
+    <div class="caja1">
+        <figure class="snip1477">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample38.jpg" alt="sample38" />
+            <div class="title">
+              <div>
+                <h2>Penny</h2>
+                <h4>Tool</h4>
+              </div>
+            </div>
+            <figcaption>
+              <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
+            </figcaption>
+            <a href="#"></a>
+          </figure>
+          <figure class="snip1477">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample91.jpg" alt="sample91" />
+            <div class="title">
+              <div>
+                <h2>Ingredia</h2>
+                <h4>Nutrisha</h4>
+              </div>
+            </div>
+            <figcaption>
+              <p>I'm killing time while I wait for life to shower me with meaning and happiness.</p>
+            </figcaption>
+            <a href="#"></a>
+          </figure>
+          <figure class="snip1477">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample35.jpg" alt="sample35" />
+            <div class="title">
+              <div>
+                <h2>Hans</h2>
+                <h4>Down</h4>
+              </div>
+            </div>
+            <figcaption>
+              <p>The only skills I have the patience to learn are those that have no real application in life. </p>
+            </figcaption>
+            <a href="#"></a>
+          </figure>
+          <figure class="snip1477">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample35.jpg" alt="sample35" />
+            <div class="title">
+              <div>
+                <h2>Hans</h2>
+                <h4>Down</h4>
+              </div>
+            </div>
+            <figcaption>
+              <p>The only skills I have the patience to learn are those that have no real application in life. </p>
+            </figcaption>
+            <a href="#"></a>
+          </figure>
+        </div>
     <footer id="footer"> <!--Pie de pagina -->
         <div class="contenedor">
             <p>¿Nos sigues?</p>
@@ -42,7 +152,7 @@
           <i class="far fa-envelope imail"></i><span>masfotos@v&p.com</span>
         </div>
     </footer>
-    <script src="/js/main.js"></script>
+    <script src="../js/main.js"></script>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
 </body>
 </html>
