Enlaces del menu

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <nav id="barra" class="menu colors">
       <ul>
         <li><a href="index.html">Temas</a></li>
-        <li><a href="">Noticias</a></li>
-        <li><a href="">Fotos</a></li>
+        <li><a href="paginas/noticias.html">Noticias</a></li>
+        <li><a href="paginas/fotos.html">Fotos</a></li>
         <li><a href="paginas/vectores.html">Vectores</a></li>
-        <li><a href="">Colaboradores</a></li>
+        <li><a href="paginas/colaborador.html">Colaboradores</a></li>
       </ul>
     </nav>
     <!--Menu-->
