--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -23,10 +23,10 @@
         <nav id="barra" class="menu colors">
             <ul>
               <li><a href="../index.html">Temas</a></li>
-              <li><a href="">Noticias</a></li>
-              <li><a href="">Fotos</a></li>
-              <li><a href="paginas/vectores.html">Vectores</a></li>
-              <li><a href="">Colaboradores</a></li>
+              <li><a href="noticias.html">Noticias</a></li>
+              <li><a href="fotos.html">Fotos</a></li>
+              <li><a href="vectores.html">Vectores</a></li>
+              <li><a href="colaborador.html">Colaboradores</a></li>
             </ul>
           </nav>
         <!--Menu-->
