--- a/menu/header.html
+++ b/menu/header.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/menu.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,600;0,700;0,800;1,400&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="../styles/menu.css">
+  <title>Document</title>
 </head>
+
 <body>
-    <head>
-        <!-- Inicio del logo-->
-        <nav class="color logo">
-            <div id="hijo">
-               <h1>Logo</h1> 
-            </div>
-        </nav>
-        <!--Fin del Logo-->
-        <!--Menu-->
-        <nav id="menu" class="menu color">
-            <ul>
-                <li><a href="">Temas</a></li>
-                <li><a href="">Noticias</a></li>
-                <li><a href="">Fotos</a></li>
-                <li><a href="">Vectores</a></li>
-                <li><a href="">Colaboradores</a></li>
-            </ul>
-        </nav>
-          <!--Menu-->
-    </head>
-    <div style="height: 10000px;"></div>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="../js/main.js"></script>
+
+  <head>
+    <!-- Inicio del logo-->
+    <nav class="color logo">
+      <div id="hijo">
+        <img src="../imagenes/logo.jpeg" alt="">
+      </div>
+    </nav>
+    <!--Fin del Logo-->
+    <!--Menu-->
+    <nav id="menu" class="menu color">
+      <ul>
+        <li><a href="">Temas</a></li>
+        <li><a href="">Noticias</a></li>
+        <li><a href="">Fotos</a></li>
+        <li><a href="">Vectores</a></li>
+        <li><a href="">Colaboradores</a></li>
+      </ul>
+    </nav>
+    <!--Menu-->
+  </head>
+  <div style="height: 10000px;"></div>
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <script src="../js/main.js"></script>
 </body>
+
 </html>
