--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Inicio del logo-->
     <nav class="colors logoimg">
       <div id="hijo">
-        <h1>Logo</h1>
+        <img src="imagenes/logo.jpeg" alt="">
       </div>
     </nav>
     <!--Fin del Logo-->
