--- a/paginas/fotos.html
+++ b/paginas/fotos.html
@@ -15,7 +15,7 @@
         <!-- Inicio del logo-->
         <nav class="colors logoimg">
           <div id="hijo">
-            <h1>Logo</h1>
+            <img src="../imagenes/logo.jpeg" alt="">
           </div>
         </nav>
         <!--Fin del Logo-->
