--- a/paginas/vectores.html
+++ b/paginas/vectores.html
@@ -1,158 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=   , initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">                                          
-    <link rel="stylesheet" href="../styles/menu.css">
-    <link rel="stylesheet" href="../styles/vectores.css">
-    <title>Document</title>
-</head>
-<body>
-    <header>
-        <!--Menú-->
-        <!-- Inicio del logo-->
-        <nav class="colors logoimg">
-          <div id="hijo">
-            <h1>Logo</h1>
-          </div>
-        </nav>
-        <!--Fin del Logo-->
-        <!--Menu-->
-        <nav id="barra" class="menu colors">
-            <ul>
-              <li><a href="../index.html">Temas</a></li>
-              <li><a href="noticias.html">Noticias</a></li>
-              <li><a href="fotos.html">Fotos</a></li>
-              <li><a href="vectores.html">Vectores</a></li>
-              <li><a href="colaborador.html">Colaboradores</a></li>
-            </ul>
-          </nav>
-        <!--Menu-->
-    </header>
-    <div class="caja1">
-        <figure class="snip1477">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample38.jpg" alt="sample38" />
-            <div class="title">
-              <div>
-                <h2>Penny</h2>
-                <h4>Tool</h4>
-              </div>
-            </div>
-            <figcaption>
-              <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
-            </figcaption>
-            <a href="#"></a>
-          </figure>
-          <figure class="snip1477">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample91.jpg" alt="sample91" />
-            <div class="title">
-              <div>
-                <h2>Ingredia</h2>
-                <h4>Nutrisha</h4>
-              </div>
-            </div>
-            <figcaption>
-              <p>I'm killing time while I wait for life to shower me with meaning and happiness.</p>
-            </figcaption>
-            <a href="#"></a>
-          </figure>
-          <figure class="snip1477">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample35.jpg" alt="sample35" />
-            <div class="title">
-              <div>
-                <h2>Hans</h2>
-                <h4>Down</h4>
-              </div>
-            </div>
-            <figcaption>
-              <p>The only skills I have the patience to learn are those that have no real application in life. </p>
-            </figcaption>
-            <a href="#"></a>
-          </figure>
-          <figure class="snip1477">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample35.jpg" alt="sample35" />
-            <div class="title">
-              <div>
-                <h2>Hans</h2>
-                <h4>Down</h4>
-              </div>
-            </div>
-            <figcaption>
-              <p>The only skills I have the patience to learn are those that have no real application in life. </p>
-            </figcaption>
-            <a href="#"></a>
-          </figure>
-          
-        </div>
 
-    <div class="caja1">
-        <figure class="snip1477">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample38.jpg" alt="sample38" />
-            <div class="title">
-              <div>
-                <h2>Penny</h2>
-                <h4>Tool</h4>
-              </div>
-            </div>
-            <figcaption>
-              <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
-            </figcaption>
-            <a href="#"></a>
-          </figure>
-          <figure class="snip1477">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample91.jpg" alt="sample91" />
-            <div class="title">
-              <div>
-                <h2>Ingredia</h2>
-                <h4>Nutrisha</h4>
-              </div>
-            </div>
-            <figcaption>
-              <p>I'm killing time while I wait for life to shower me with meaning and happiness.</p>
-            </figcaption>
-            <a href="#"></a>
-          </figure>
-          <figure class="snip1477">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample35.jpg" alt="sample35" />
-            <div class="title">
-              <div>
-                <h2>Hans</h2>
-                <h4>Down</h4>
-              </div>
-            </div>
-            <figcaption>
-              <p>The only skills I have the patience to learn are those that have no real application in life. </p>
-            </figcaption>
-            <a href="#"></a>
-          </figure>
-          <figure class="snip1477">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample35.jpg" alt="sample35" />
-            <div class="title">
-              <div>
-                <h2>Hans</h2>
-                <h4>Down</h4>
-              </div>
-            </div>
-            <figcaption>
-              <p>The only skills I have the patience to learn are those that have no real application in life. </p>
-            </figcaption>
-            <a href="#"></a>
-          </figure>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=   , initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,600;0,700;0,800;1,400&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="../styles/menu.css">
+  <link rel="stylesheet" href="../styles/vectores.css">
+  <title>Document</title>
+</head>
+
+<body>
+  <header>
+    <!--Menú-->
+    <!-- Inicio del logo-->
+    <nav class="colors logoimg">
+      <div id="hijo">
+        <img src="../imagenes/logo.jpeg" alt="">
+      </div>
+    </nav>
+    <!--Fin del Logo-->
+    <!--Menu-->
+    <nav id="barra" class="menu colors">
+      <ul>
+        <li><a href="../index.html">Temas</a></li>
+        <li><a href="noticias.html">Noticias</a></li>
+        <li><a href="fotos.html">Fotos</a></li>
+        <li><a href="vectores.html">Vectores</a></li>
+        <li><a href="colaborador.html">Colaboradores</a></li>
+      </ul>
+    </nav>
+    <!--Menu-->
+  </header>
+  <div class="caja1">
+    <figure class="snip1477">
+      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample38.jpg" alt="sample38" />
+      <div class="title">
+        <div>
+          <h2>Penny</h2>
+          <h4>Tool</h4>
         </div>
-    <footer id="footer"> <!--Pie de pagina -->
-        <div class="contenedor">
-            <p>¿Nos sigues?</p>
-            <a href=""><i class="fab fa-facebook"></i></a>
-            <a href=""><i class="fab fa-instagram"></i></a>
-            <a href=""><i class="fab fa-twitter"></i></a>
-            <a href=""><i class="fab fa-google-plus-g"></i></a>
-          <p>Escribenos y unete a nuestro equipo</p>
-          <i class="far fa-envelope imail"></i><span>masfotos@v&p.com</span>
+      </div>
+      <figcaption>
+        <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1477">
+      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample91.jpg" alt="sample91" />
+      <div class="title">
+        <div>
+          <h2>Ingredia</h2>
+          <h4>Nutrisha</h4>
         </div>
-    </footer>
-    <script src="../js/main.js"></script>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+      </div>
+      <figcaption>
+        <p>I'm killing time while I wait for life to shower me with meaning and happiness.</p>
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1477">
+      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample35.jpg" alt="sample35" />
+      <div class="title">
+        <div>
+          <h2>Hans</h2>
+          <h4>Down</h4>
+        </div>
+      </div>
+      <figcaption>
+        <p>The only skills I have the patience to learn are those that have no real application in life. </p>
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1477">
+      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample35.jpg" alt="sample35" />
+      <div class="title">
+        <div>
+          <h2>Hans</h2>
+          <h4>Down</h4>
+        </div>
+      </div>
+      <figcaption>
+        <p>The only skills I have the patience to learn are those that have no real application in life. </p>
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+
+  </div>
+
+  <div class="caja1">
+    <figure class="snip1477">
+      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample38.jpg" alt="sample38" />
+      <div class="title">
+        <div>
+          <h2>Penny</h2>
+          <h4>Tool</h4>
+        </div>
+      </div>
+      <figcaption>
+        <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1477">
+      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample91.jpg" alt="sample91" />
+      <div class="title">
+        <div>
+          <h2>Ingredia</h2>
+          <h4>Nutrisha</h4>
+        </div>
+      </div>
+      <figcaption>
+        <p>I'm killing time while I wait for life to shower me with meaning and happiness.</p>
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1477">
+      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample35.jpg" alt="sample35" />
+      <div class="title">
+        <div>
+          <h2>Hans</h2>
+          <h4>Down</h4>
+        </div>
+      </div>
+      <figcaption>
+        <p>The only skills I have the patience to learn are those that have no real application in life. </p>
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1477">
+      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample35.jpg" alt="sample35" />
+      <div class="title">
+        <div>
+          <h2>Hans</h2>
+          <h4>Down</h4>
+        </div>
+      </div>
+      <figcaption>
+        <p>The only skills I have the patience to learn are those that have no real application in life. </p>
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+  </div>
+  <footer id="footer">
+    <!--Pie de pagina -->
+    <div class="contenedor">
+      <p>¿Nos sigues?</p>
+      <a href=""><i class="fab fa-facebook"></i></a>
+      <a href=""><i class="fab fa-instagram"></i></a>
+      <a href=""><i class="fab fa-twitter"></i></a>
+      <a href=""><i class="fab fa-google-plus-g"></i></a>
+      <p>Escribenos y unete a nuestro equipo</p>
+      <i class="far fa-envelope imail"></i><span>masfotos@v&p.com</span>
+    </div>
+  </footer>
+  <script src="../js/main.js"></script>
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
 </body>
+
 </html>
