--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en"> 
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Agencia de fotos e imagenes">
+  <meta name="keywords" content="seo,HTML, tags">
+  <meta name="robots" content="noindex"><meta charset="utf-8">
+  <link rel="icon" type="image/png" href="imagenes/logo1.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,600;0,700;0,800;1,400&display=swap"
     rel="stylesheet">
@@ -18,7 +22,7 @@
     <!-- Inicio del logo-->
     <nav class="colors logoimg">
       <div id="hijo">
-        <img src="imagenes/logo.jpeg" alt="">
+        <img src="imagenes/logo.jpeg" alt="Logo V&P">
       </div>
     </nav>
     <!--Fin del Logo-->
