--- a/paginas/fotos.html
+++ b/paginas/fotos.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="imagenes/logo1.png"/>
     <meta name="viewport" content="width=   , initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">                                          
@@ -15,7 +16,7 @@
         <!-- Inicio del logo-->
         <nav class="colors logoimg">
           <div id="hijo">
-            <img src="../imagenes/logo.jpeg" alt="">
+            <img src="../imagenes/logo.jpeg" alt="Logo V&P">
           </div>
         </nav>
         <!--Fin del Logo-->
