--- a/paginas/vectores.html
+++ b/paginas/vectores.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/png" href="imagenes/logo1.png"/>
   <meta name="viewport" content="width=   , initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,600;0,700;0,800;1,400&display=swap"
     rel="stylesheet">
@@ -19,7 +20,7 @@
     <!-- Inicio del logo-->
     <nav class="colors logoimg">
       <div id="hijo">
-        <img src="../imagenes/logo.jpeg" alt="">
+        <img src="../imagenes/logo.jpeg" alt="Logo V&P">
       </div>
     </nav>
     <!--Fin del Logo-->
