--- a/paginas/colaborador.html
+++ b/paginas/colaborador.html
@@ -11,7 +11,7 @@
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/menu.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <title>Document</title>
+  <title>V&M - Conviértete en colaborador</title>
 </head>
 
 <body>
