--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Agencia de fotos e imagenes">
   <meta name="keywords" content="seo,HTML, tags">
-  <meta name="robots" content="noindex"><meta charset="utf-8">
-  <link rel="icon" type="image/png" href="imagenes/logo1.png"/>
+  <meta name="robots" content="noindex">
+  <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="imagenes/logo1.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,600;0,700;0,800;1,400&display=swap"
     rel="stylesheet">
@@ -42,25 +44,25 @@
   <div class="card-group">
 
     <div class="card" style="width: 18rem ;">
-      <img src="imagenes/prueba2.jpg" class="card-img-top" alt="">
+      <img src="imagenes/Deportes polo - foto Javier Villamil (2).JPG" class="card-img-top" alt="">
 
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.
+        <h5 class="card-title">DEPORTES</h5>
+        <p class="card-text">diferentes momentos del deporte y tambien algunos deportistas.
+
         </p>
-        <a href="paginas/vectores.html" class="btn btn-primary">Vectores</a>
+        <a href="paginas/deportes.html" class="btn btn-primary">Deportes</a>
       </div>
     </div>
     <div class="card" style="width: 18rem ;">
-      <img src="imagenes/prueba2.jpg" class="card-img-top" alt="">
+      <img src="imagenes/Mompox Rio Magdalena  - foto javier villamil (2).JPG" class="card-img-top" alt="">
 
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.
+        <h5 class="card-title">PAISAJES</h5>
+        <p class="card-text">diferentes momentos de nustros hermosos paisajes
+
         </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="#" class="btn btn-primary">Paisajes</a>
       </div>
     </div>
     <div class="card" style="width: 18rem ;">
