--- a/index.html
+++ b/index.html
@@ -62,43 +62,40 @@
         <p class="card-text">diferentes momentos de nustros hermosos paisajes
 
         </p>
-        <a href="#" class="btn btn-primary">Paisajes</a>
+        <a href="paginas/paisajes.html" class="btn btn-primary">Paisajes</a>
       </div>
     </div>
     <div class="card" style="width: 18rem ;">
-      <img src="imagenes/prueba2.jpg" class="card-img-top" alt="">
+      <img src="imagenes/IMG_8453.JPG" class="card-img-top" alt="">
 
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.
+        <h5 class="card-title">COMIDA</h5>
+        <p class="card-text">todo tipo de platos de comida para antojar al paladar.
         </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="paginas/comida.html" class="btn btn-primary">comida</a>
       </div>
     </div>
   </div>
   <div class="card-group">
 
     <div class="card" style="width: 18rem ;">
-      <img src="imagenes/prueba2.jpg" class="card-img-top" alt="">
+      <img src="imagenes/Documental - Johann Lopez (2).jpg" class="card-img-top" alt="">
 
       <div class="card-body">
-        <h5 class="card-title">fotografos</h5>
-        <p class="card-text">Some quick example text to build on the fotos and make up the bulk of the card's
-          content.
+        <h5 class="card-title">DOCUMENTAL</h5>
+        <p class="card-text">fotos que muestran un mundo diferente al que estamos acostumbrados.
         </p>
-        <a href="#" class="btn btn-primary">entar</a>
+        <a href="paginas/documetal.html" class="btn btn-primary">entar</a>
       </div>
     </div>
     <div class="card" style="width: 18rem ;">
-      <img src="imagenes/prueba2.jpg" class="card-img-top" alt="">
+      <img src="imagenes/Retratos Gloria Zea- foto javier villamil   IMG_8521.JPG" class="card-img-top" alt="">
 
       <div class="card-body">
-        <h5 class="card-title">fotos</h5>
-        <p class="card-text">Some quick example text to build on the fotos and make up the bulk of the card's
-          content.
+        <h5 class="card-title">FAMOSOS</h5>
+        <p class="card-text">retratos de algunos famosos que nosotros ya podemos reconocer.
         </p>
-        <a href="#" class="btn btn-primary">fotos</a>
+        <a href="paginas/famosos.html" class="btn btn-primary">fomosos</a>
       </div>
     </div>
 
