--- a/paginas/famosos.html
+++ b/paginas/famosos.html
@@ -38,11 +38,11 @@
   </header>
   <div class="caja1">
     <figure class="snip1477">
-      <img src="../imagenes/Deportes - foto javier villamil.JPG" alt="sample38" />
+      <img src="../imagenes/Retrato Antonio Caro - foto Javier Villamil.JPG" alt="sample38" />
       <div class="title">
         <div>
-          <h2>futbol</h2>
-          <h4>S.Colombia</h4>
+          <h2>retrato</h2>
+          <h4>Antonio Caro</h4>
         </div>
       </div>
       <figcaption>
@@ -51,11 +51,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Deportes - foto javier villamil (6).jpg" alt="sample91" />
+      <img src="../imagenes/Retratos Daniela Botero - foto Javier Villamil.jpg" alt="sample91" />
       <div class="title">
         <div>
-          <h2>futbol</h2>
-          <h4>J. Rodriguez</h4>
+          <h2>retrato</h2>
+          <h4>Daniela Botero</h4>
         </div>
       </div>
       <figcaption>
@@ -64,11 +64,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Deportes - foto javier villamil (4).JPG" alt="sample35" />
+      <img src="../imagenes/Retratos Gloria Zea- foto javier villamil   IMG_8521.JPG" alt="sample35" />
       <div class="title">
         <div>
-          <h2>futbol</h2>
-          <h4>R.F.Garcia</h4>
+          <h2>retrato</h2>
+          <h4>Gloria Zea</h4>
         </div>
       </div>
       <figcaption>
@@ -77,11 +77,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Deportes - foto javier villamil (3).JPG" alt="sample35" />
+      <img src="../imagenes/Retratos Jesús Abad Colorado - foto javier villamil.JPG" alt="sample35" />
       <div class="title">
         <div>
-          <h2>futbol</h2>
-          <h4>J. Rodriguez</h4>
+          <h2>retrato</h2>
+          <h4>Jesus A. Colorado</h4>
         </div>
       </div>
       <figcaption>
@@ -94,11 +94,11 @@
 
   <div class="caja1">
     <figure class="snip1477">
-      <img src="../imagenes/Deportes polo - foto Javier Villamil (2).JPG" alt="sample35" alt="sample38" />
+      <img src="../imagenes/Retratos Juliet Restrepo- F.jpg" alt="sample35" alt="sample38" />
       <div class="title">
         <div>
-          <h2>Polo</h2>
-          <h4>En partido</h4>
+          <h2>retrato</h2>
+          <h4>Juliet Restrepo</h4>
         </div>
       </div>
       <figcaption>
@@ -107,11 +107,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Deportes polo - foto Javier Villamil.JPG" alt="sample91" />
+      <img src="../imagenes/Retratos Linda Lucia Callejas- foto Javier Villamil.jpg" alt="sample91" />
       <div class="title">
         <div>
-          <h2>Polo</h2>
-          <h4>En partido</h4>
+          <h2>retrato</h2>
+          <h4>Linda L. Callejas</h4>
         </div>
       </div>
       <figcaption>
@@ -120,11 +120,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Juan Sebastian Cabal y Robert Farah - foto Javier Villamil.JPG" alt="sample35" />
+      <img src="../imagenes/Retratos Maia - Foto Javier Villamil.JPG" alt="sample35" />
       <div class="title">
         <div>
-          <h2>Tenis</h2>
-          <h4>Deportistas</h4>
+          <h2>retrato</h2>
+          <h4>Maria</h4>
         </div>
       </div>
       <figcaption>
@@ -133,11 +133,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Deportes - foto Javier Villamil (2).JPG" alt="sample35" />
+      <img src="../imagenes/Yuri Buenaventura 024A6413.JPG" alt="sample35" />
       <div class="title">
         <div>
-          <h2>deportistas</h2>
-          <h4>paralimpicos</h4>
+          <h2>retrato</h2>
+          <h4>Yuri Buenaventura</h4>
         </div>
       </div>
       <figcaption>
