--- a/paginas/paisajes.html
+++ b/paginas/paisajes.html
@@ -38,11 +38,11 @@
   </header>
   <div class="caja1">
     <figure class="snip1477">
-      <img src="../imagenes/Deportes - foto javier villamil.JPG" alt="sample38" />
+      <img src="../imagenes/Mompox Rio Magdalena  - foto javier villamil.JPG" alt="sample38" />
       <div class="title">
         <div>
-          <h2>futbol</h2>
-          <h4>S.Colombia</h4>
+          <h2>mompox</h2>
+          <h4>R. Magdalena
         </div>
       </div>
       <figcaption>
@@ -51,11 +51,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Deportes - foto javier villamil (6).jpg" alt="sample91" />
+      <img src="../imagenes/Mompox Rio Magdalena  - foto javier villamil (2).JPG" alt="sample91" />
       <div class="title">
         <div>
-          <h2>futbol</h2>
-          <h4>J. Rodriguez</h4>
+          <h2>Mompox</h2>
+          <h4>atardecer</h4>
         </div>
       </div>
       <figcaption>
@@ -64,11 +64,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Deportes - foto javier villamil (4).JPG" alt="sample35" />
+      <img src="../imagenes/Mompox Rio Magdalena  - foto javier villamil (3).JPG" alt="sample35" />
       <div class="title">
         <div>
-          <h2>futbol</h2>
-          <h4>R.F.Garcia</h4>
+          <h2>mompox</h2>
+          <h4>lluvia</h4>
         </div>
       </div>
       <figcaption>
@@ -77,11 +77,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Deportes - foto javier villamil (3).JPG" alt="sample35" />
+      <img src="../imagenes/panoramica Bogotá- Nestor Gomez.JPG" alt="sample35" />
       <div class="title">
         <div>
-          <h2>futbol</h2>
-          <h4>J. Rodriguez</h4>
+          <h2>Bogotá</h2>
+          <h4>panoramica</h4>
         </div>
       </div>
       <figcaption>
@@ -94,11 +94,11 @@
 
   <div class="caja1">
     <figure class="snip1477">
-      <img src="../imagenes/Deportes polo - foto Javier Villamil (2).JPG" alt="sample35" alt="sample38" />
+      <img src="../imagenes/panoramica Bogotá- Nestor Gomez (2).jpg" alt="sample38" />
       <div class="title">
         <div>
-          <h2>Polo</h2>
-          <h4>En partido</h4>
+          <h2>Bogotá</h2>
+          <h4>panoramica</h4>
         </div>
       </div>
       <figcaption>
@@ -107,11 +107,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Deportes polo - foto Javier Villamil.JPG" alt="sample91" />
+      <img src="../imagenes/panoramica Bogotá- Nestor Gomez (3).jpg" alt="sample91" />
       <div class="title">
         <div>
-          <h2>Polo</h2>
-          <h4>En partido</h4>
+          <h2>Bogotá</h2>
+          <h4>panoramica</h4>
         </div>
       </div>
       <figcaption>
@@ -120,11 +120,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Juan Sebastian Cabal y Robert Farah - foto Javier Villamil.JPG" alt="sample35" />
+      <img src="../imagenes/panoramica Bogotá- Nestor Gomez (4).JPG" alt="sample35" />
       <div class="title">
         <div>
-          <h2>Tenis</h2>
-          <h4>Deportistas</h4>
+          <h2>Bogotá</h2>
+          <h4>panoramica</h4>
         </div>
       </div>
       <figcaption>
@@ -133,11 +133,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Deportes - foto Javier Villamil (2).JPG" alt="sample35" />
+      <img src="../imagenes/panoramica Bogotá- Nestor Gomez (5).jpg" alt="sample35" />
       <div class="title">
         <div>
-          <h2>deportistas</h2>
-          <h4>paralimpicos</h4>
+          <h2>Bogotá</h2>
+          <h4>panoramica</h4>
         </div>
       </div>
       <figcaption>
