--- a/paginas/comida.html
+++ b/paginas/comida.html
@@ -38,11 +38,11 @@
   </header>
   <div class="caja1">
     <figure class="snip1477">
-      <img src="../imagenes/Deportes - foto javier villamil.JPG" alt="sample38" />
+      <img src="../imagenes/IMG_8453.JPG" alt="sample38" />
       <div class="title">
         <div>
-          <h2>futbol</h2>
-          <h4>S.Colombia</h4>
+          <h2>plato</h2>
+          <h4>#1</h4>
         </div>
       </div>
       <figcaption>
@@ -51,11 +51,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Deportes - foto javier villamil (6).jpg" alt="sample91" />
+      <img src="../imagenes/IMG_8502.JPG" alt="sample91" />
       <div class="title">
         <div>
-          <h2>futbol</h2>
-          <h4>J. Rodriguez</h4>
+          <h2>plato</h2>
+          <h4>#2</h4>
         </div>
       </div>
       <figcaption>
@@ -64,11 +64,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Deportes - foto javier villamil (4).JPG" alt="sample35" />
+      <img src="../imagenes/IMG_8576.jpg" alt="sample35" />
       <div class="title">
         <div>
-          <h2>futbol</h2>
-          <h4>R.F.Garcia</h4>
+          <h2>plato</h2>
+          <h4>#3</h4>
         </div>
       </div>
       <figcaption>
@@ -77,11 +77,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Deportes - foto javier villamil (3).JPG" alt="sample35" />
+      <img src="../imagenes/IMG_9344.JPG" alt="sample35" />
       <div class="title">
         <div>
-          <h2>futbol</h2>
-          <h4>J. Rodriguez</h4>
+          <h2>plato</h2>
+          <h4>#4</h4>
         </div>
       </div>
       <figcaption>
@@ -94,11 +94,11 @@
 
   <div class="caja1">
     <figure class="snip1477">
-      <img src="../imagenes/Deportes polo - foto Javier Villamil (2).JPG" alt="sample35" alt="sample38" />
+      <img src="../imagenes/IMG_9536.JPG" alt="sample35" alt="sample38" />
       <div class="title">
         <div>
-          <h2>Polo</h2>
-          <h4>En partido</h4>
+          <h2>plato</h2>
+          <h4>#5</h4>
         </div>
       </div>
       <figcaption>
@@ -107,11 +107,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Deportes polo - foto Javier Villamil.JPG" alt="sample91" />
+      <img src="../imagenes/IMG_9622.JPG" alt="sample91" />
       <div class="title">
         <div>
-          <h2>Polo</h2>
-          <h4>En partido</h4>
+          <h2>plato</h2>
+          <h4>#6</h4>
         </div>
       </div>
       <figcaption>
@@ -120,11 +120,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Juan Sebastian Cabal y Robert Farah - foto Javier Villamil.JPG" alt="sample35" />
+      <img src="../imagenes/IMG_9722.JPG" alt="sample35" />
       <div class="title">
         <div>
-          <h2>Tenis</h2>
-          <h4>Deportistas</h4>
+          <h2>plato</h2>
+          <h4>#7</h4>
         </div>
       </div>
       <figcaption>
