--- a/paginas/comida.html
+++ b/paginas/comida.html
@@ -133,11 +133,11 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1477">
-      <img src="../imagenes/Deportes - foto Javier Villamil (2).JPG" alt="sample35" />
+      <img src="../imagenes/img comida.jpeg" alt="sample35" />
       <div class="title">
         <div>
-          <h2>deportistas</h2>
-          <h4>paralimpicos</h4>
+          <h2>plato</h2>
+          <h4>#8</h4>
         </div>
       </div>
       <figcaption>
