--- a/paginas/fotos.html
+++ b/paginas/fotos.html
@@ -48,7 +48,7 @@
       <figcaption>
         <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
       </figcaption>
-      <a href="#"></a>
+      <a href="formulario.html"></a>
     </figure>
     <figure class="snip1477">
       <img src="../imagenes/IMG_8502.JPG" alt="sample91" />
@@ -61,7 +61,7 @@
       <figcaption>
         <p>I'm killing time while I wait for life to shower me with meaning and happiness.</p>
       </figcaption>
-      <a href="#"></a>
+      <a href="formulario.html"></a>
     </figure>
     <figure class="snip1477">
       <img src="../imagenes/IMG_8576.jpg" alt="sample35" />
@@ -74,7 +74,7 @@
       <figcaption>
         <p>The only skills I have the patience to learn are those that have no real application in life. </p>
       </figcaption>
-      <a href="#"></a>
+      <a href="formulario.html"></a>
     </figure>
     <figure class="snip1477">
       <img src="../imagenes/IMG_9344.JPG" alt="sample35" />
@@ -87,7 +87,7 @@
       <figcaption>
         <p>The only skills I have the patience to learn are those that have no real application in life. </p>
       </figcaption>
-      <a href="#"></a>
+      <a href="formulario.html"></a>
     </figure>
 
   </div>
@@ -104,7 +104,7 @@
       <figcaption>
         <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
       </figcaption>
-      <a href="#"></a>
+      <a href="formulario.html"></a>
     </figure>
     <figure class="snip1477">
       <img src="../imagenes/IMG_9622.JPG" alt="sample91" />
@@ -117,7 +117,7 @@
       <figcaption>
         <p>I'm killing time while I wait for life to shower me with meaning and happiness.</p>
       </figcaption>
-      <a href="#"></a>
+      <a href="formulario.html"></a>
     </figure>
     <figure class="snip1477">
       <img src="../imagenes/IMG_9722.JPG" alt="sample35" />
@@ -130,7 +130,7 @@
       <figcaption>
         <p>The only skills I have the patience to learn are those that have no real application in life. </p>
       </figcaption>
-      <a href="#"></a>
+      <a href="formulario.html"></a>
     </figure>
     <figure class="snip1477">
       <img src="../imagenes/img comida.jpeg" alt="sample35" />
@@ -143,7 +143,7 @@
       <figcaption>
         <p>The only skills I have the patience to learn are those that have no real application in life. </p>
       </figcaption>
-      <a href="#"></a>
+      <a href="formulario.html"></a>
     </figure>
   </div>
   <div class="caja1">
